...
        footNoteLabel.textColor = .ypWhite
        footNoteLabel.textAlignment = .center
        footNoteLabel.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(footNoteLabel)
        
        newGameButton.configure(title: "Новая игра")
        newGameButton.accessibilityIdentifier = "NewGameButton"
        newGameButton.setImage(UIImage(systemName: "arcade.stick"), for: .normal)
        newGameButton.addTarget(self, action: #selector(newGameButtonTapped), for: .touchUpInside)
        
        settingsButton.configure(title: "Настройки")
        settingsButton.setImage(UIImage(systemName: "gearshape"), for: .normal)
        settingsButton.addTarget(self, action: #selector(settingsButtonTapped), for: .touchUpInside)
...
